tests/reference/asr-test_assign5-694a98f.stderr
semantic error: Type mismatch in assignment, the types must be compatible
 --> tests/errors/test_assign5.py:6:5
  |
6 |     x = y
  |     ^   ^ type mismatch ('list[list[i32]]' and 'list[list[str]]')


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
